--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,6 @@ repositories {
 
 dependencies {
     compile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.projectlombok:lombok:1.16.20'
+    compile 'org.springframework:spring-core:5.0.6.RELEASE'
 }
