--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,7 @@ dependencies {
     compile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.projectlombok:lombok:1.16.20'
     compile 'org.springframework:spring-core:5.0.6.RELEASE'
+    compile 'org.slf4j:log4j-over-slf4j:1.7.25'
+
+
 }
