--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile 'org.projectlombok:lombok:1.16.20'
     compile 'org.springframework:spring-core:5.0.6.RELEASE'
     compile 'org.slf4j:log4j-over-slf4j:1.7.25'
-
+    // https://mvnrepository.com/artifact/javax.validation/validation-api
+    compile group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
 
 }
